tests/baselines/reference/destructuringControlFlowNoCrash.errors.txt
tests/cases/compiler/destructuringControlFlowNoCrash.ts(3,3): error TS2339: Property 'date' does not exist on type '(inspectedElement: any) => number'.
tests/cases/compiler/destructuringControlFlowNoCrash.ts(10,3): error TS2339: Property 'date2' does not exist on type '(inspectedElement: any) => any'.
tests/cases/compiler/destructuringControlFlowNoCrash.ts(11,28): error TS1005: '=>' expected.


==== tests/cases/compiler/destructuringControlFlowNoCrash.ts (3 errors) ====
    // legal JS, if nonsensical, which also triggers the issue
    const {
      date,
      ~~~~
!!! error TS2339: Property 'date' does not exist on type '(inspectedElement: any) => number'.
    } = (inspectedElement: any) => 0;
    
    date.toISOString();
    
    // Working flow code
    const {
      date2,
      ~~~~~
!!! error TS2339: Property 'date2' does not exist on type '(inspectedElement: any) => any'.
    } = (inspectedElement: any).props;
                               ~
!!! error TS1005: '=>' expected.
    
    date2.toISOString();
    